fix(board)：限制棋盘拆除器并完善占卜与岔路高亮表现。